Updated to latest version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "Pocuter.cpp"
+idf_component_register(SRCS "Pocuter.cpp" "PocketStarPause.cpp"
                     INCLUDE_DIRS "."
 		    REQUIRES fatfs nvs_flash app_update mbedtls wpa_supplicant esp_adc_cal esp_http_client esp_http_server
 )
